--- a/FirstProjectDevWeb/projeto.html
+++ b/FirstProjectDevWeb/projeto.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 class="nomesite">Luiz Delicias</h1>
+        <img src="logo.png.png" alt="Logo" id="Logo">
         <nav class="navigation">
             <div class="menu">
             <a  href="#">Carne</a>
@@ -25,15 +25,32 @@
         </nav>
     </header>
     <main>
-        <h1>Ola fodajefwoejejree</h1>
         <img src="vegetarianas.png" alt="principal" class="imagem-toda"><br> 
         <button class="mural">Mural</button>
         <button class="receita">Receita</button>
-
+            <div id="listabolo">
+                <li>2 xícaras (chá) de açúcar  </li>
+                <li >3 xícaras (chá) de farinha de trigo  </li>
+                <li >4 colheres (sopa) de margarina  </li>
+                <li >3 ovos  </li>
+                <li >leite</li>
+                <li >1 e 1/2 xícara (chá) de leite</li>
+                <li > 1 colher (sopa) bem cheia de fermento em pó </li>
+                <img src="bolo.jpg" alt="Bolo">
+            </div>
+            <div id="listapao">
+                <li>1 e 1/4 xícara de leite morno </li>
+                <li>1/2 xícara de óleo </li>
+                <li>2 ovos </li>
+                <li>2 tabletes de fermento para pão </li>
+                <li>farinha de trigo </li>
+                <li>3 xícaras de farinha de trigo </li>
+                <li>1 colher (chá) de sal </li>
+                <li>1/4 xícara de açúcar</li> 
+                <img src="R.jpg" alt="Pão">
+            </div>
         </main>
         <footer>
-            <img  class="receita" src="receita.jpg" alt="">
-            <img  class="receita2" src="receita2.jpg" alt=""> <br>
             <div class="footer-links">
                 <a href="#">Sobre Nós</a> 
                 <a href="#">Termos de uso</a>
