--- a/FirstProjectDevWeb/projeto.html
+++ b/FirstProjectDevWeb/projeto.html
@@ -29,6 +29,7 @@
         <button class="mural">Mural</button>
         <button class="receita">Receita</button>
             <div id="listabolo">
+                <img src="bolo.jpg" alt="Bolo" class="imgbolo">
                 <li>2 xícaras (chá) de açúcar  </li>
                 <li >3 xícaras (chá) de farinha de trigo  </li>
                 <li >4 colheres (sopa) de margarina  </li>
@@ -36,9 +37,9 @@
                 <li >leite</li>
                 <li >1 e 1/2 xícara (chá) de leite</li>
                 <li > 1 colher (sopa) bem cheia de fermento em pó </li>
-                <img src="bolo.jpg" alt="Bolo">
             </div>
             <div id="listapao">
+                <img src="R.jpg" alt="Pão" class="imgpao">
                 <li>1 e 1/4 xícara de leite morno </li>
                 <li>1/2 xícara de óleo </li>
                 <li>2 ovos </li>
@@ -47,7 +48,6 @@
                 <li>3 xícaras de farinha de trigo </li>
                 <li>1 colher (chá) de sal </li>
                 <li>1/4 xícara de açúcar</li> 
-                <img src="R.jpg" alt="Pão">
             </div>
         </main>
         <footer>
@@ -57,7 +57,7 @@
                 <a href="#">Contato</a>
                 <a href="#">Política de privacidade</a>
             </div>
-            <p>Todos os direitos reservados. Dhiego.Inc</p>
+            <p>Todos os direitos reservados. 2024 ©</p>
               </footer>
 </body>
 </html>
