--- a/FirstProjectDevWeb/projeto.html
+++ b/FirstProjectDevWeb/projeto.html
@@ -4,30 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Luiz Delicias</title>
 </head>
 <body>
     <header>
         <img src="logo.png.png" alt="Logo" id="Logo">
+        <nav class="login-register">
+                <input type="text" placeholder="Buscar...">
+                <button>Login</button>
+                <button>Registrar</button>
+        </nav>
         <nav class="navigation">
-            <div class="menu">
             <a  href="#">Carne</a>
             <a  href="#">Bolos</a>
-            <a  href="#">Sobremesas</a>
-            <a  href="#">Massas</a>
-            <a  href="#">Mar</a>
-            </div>
-            <div class="login-register">  
-                <input type="text" placeholder="Buscar">
-                <button>Login</button> <br>
-                <button>Registrar</button>
-            </div>
-        </nav>
+           <a href="#">Doces</a>
+            <a  href="#">Massa</a>
+            <a  href="#">Peixes</a>
+            </nav>
+            
     </header>
     <main>
-        <img src="vegetarianas.png" alt="principal" class="imagem-toda"><br> 
+        <img src="Comida3.jpg" alt="principal" class="imagem-toda"><br> 
         <button class="mural">Mural</button>
         <button class="receita">Receita</button>
+        <h1 id="sugestao">Sugestões:</h1>
             <div id="listabolo">
                 <img src="bolo.jpg" alt="Bolo" class="imgbolo">
                 <li>2 xícaras (chá) de açúcar  </li>
@@ -40,7 +41,7 @@
             </div>
             <div id="listapao">
                 <img src="R.jpg" alt="Pão" class="imgpao">
-                <li>1 e 1/4 xícara de leite morno </li>
+               <li>1 e 1/4 xícara de leite morno</li> 
                 <li>1/2 xícara de óleo </li>
                 <li>2 ovos </li>
                 <li>2 tabletes de fermento para pão </li>
